Updates installation/myst-studio/alternatives/README.md
Auto commit by GitBook Editor